# s2u-gamedata

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  gamedata.cpp  gamedata.hpp
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  cmake-multi-platform.yml
cmake/: dynlibutils.cmake  sourcesdk.cmake
cmake/platform/: linux.cmake  macos.cmake  shared.cmake  windows.cmake
gamedata/: schema.json
include/: gamedata.hpp
src/: gamedata.cpp
